[package]

name = "routeros_rust"
version = "0.0.2"
authors = ["Jason Cardinal <jasonfowl1234@yahoo.com>"]
repository = "https://github.com/Wooowe/mikrotik-rust"
description = "Mikrotik API for Rust"
readme = "README.md"
license = "GPL-3.0"

keywords = ["Mikrotik", "Router Os", "Router Os API"]

[lib]
name = "router_os"
path = "src/routeros.rs"

[[bin]]
name = "example"
path = "example.rs"

[dependencies]
gcc = "0.3.55"
log = "0.4.8"
env_logger = "0.7.1"